hashing tenc updated

--- a/server_site/.env
+++ b/server_site/.env
@@ -1,4 +1,4 @@
 PORT = 3000
-DB_URL = mongodb://localhost:27017/Hospital
+DB_URL = mongodb+srv://marufapurbo911:34oZdfCBMCOvknMP@cluster0.v5vkx.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = "sahel-123"
 
